caching for requests and other improvs
